{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 41,
  "lineage": "b3d8016a-6713-f006-30a9-2229fad4502c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531334948775:internet-gateway/igw-07847015b9f944b86",
            "id": "igw-07847015b9f944b86",
            "owner_id": "531334948775",
            "tags": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-igw"
            },
            "vpc_id": "vpc-0c72ba8d05b68fff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531334948775:route-table/rtb-08172e0f253a95887",
            "id": "rtb-08172e0f253a95887",
            "owner_id": "531334948775",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07847015b9f944b86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c72ba8d05b68fff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aabcc9a90dc76684",
            "route_table_id": "rtb-08172e0f253a95887",
            "subnet_id": "subnet-0288fff1a29fdaba8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dd856e524c69431",
            "route_table_id": "rtb-08172e0f253a95887",
            "subnet_id": "subnet-0889b747f48540e54"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "beanstalk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531334948775:security-group/sg-0f2932e90cf5953b2",
            "description": "Security group for Elastic Beanstalk instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2932e90cf5953b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "blacklist-service-dev-beanstalk-sg",
            "name_prefix": "",
            "owner_id": "531334948775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-beanstalk-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-beanstalk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c72ba8d05b68fff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531334948775:security-group/sg-0c10f3e3524ae71de",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c10f3e3524ae71de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f2932e90cf5953b2"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "blacklist-service-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "531334948775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c72ba8d05b68fff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.beanstalk_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531334948775:subnet/subnet-0288fff1a29fdaba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0288fff1a29fdaba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "531334948775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-public-1"
            },
            "vpc_id": "vpc-0c72ba8d05b68fff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531334948775:subnet/subnet-0889b747f48540e54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0889b747f48540e54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "531334948775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-public-2"
            },
            "vpc_id": "vpc-0c72ba8d05b68fff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531334948775:vpc/vpc-0c72ba8d05b68fff0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b92fb9a7fd11e4fd",
            "default_route_table_id": "rtb-03f796db185b13681",
            "default_security_group_id": "sg-0b71dd47ecc155c31",
            "dhcp_options_id": "dopt-c60e22a3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c72ba8d05b68fff0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f796db185b13681",
            "owner_id": "531334948775",
            "tags": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "blacklist-service-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}